# AutoDiff

./: CMakeLists.txt  readme.md
include/: Graph.h  Layer.h  Losses.h  MNIST.h  Matrics.h  Model.h  NN.h  Node.h  Operation.h  Session.h  Tensor.h
src/: Graph.cpp  Layer.cpp  Losses.cpp  Matrics.cpp  Model.cpp  NN.cpp  Node.cpp  Operation.cpp  Session.cpp  Tensor.cpp  main.cpp
